Fix for item validation (sale price); fix for category accordion to collapse on pager event; logo font tweak

--- a/themes/furnitheme/css/pages.css
+++ b/themes/furnitheme/css/pages.css
@@ -498,11 +498,11 @@ ul.pager a li, ul.pager li a {
 	font-weight: 100;
 	text-decoration: none;
 	border-bottom: 2px solid #6d6e71;
-	width: 9.5em;
+	width: 10em;
 	display: block;
-	padding-left: 7em;
-	padding-bottom: .3em;
+	padding: 0 .3em .3em 5em;
 	z-index: 200;
+	text-align: right;
 }	
 	
 #menu-pic-wrapper {
